# hagane

./: .gitignore  Cargo.toml  README.md  Rakefile  enable-metal-validation.sh
core/: Cargo.toml
core-foundation/: Cargo.toml
core-foundation/src/: allocator.rs  lib.rs  null.rs  object.rs  string.rs
core/src/: lib.rs
generator/: compile-shaders  generate-source  objc-bridge-generator  objc-bridge-generator.rb  simd-bridge-generator.rb
generator/lib/bridge/: output.rb
generator/xml/: cocoa.xml  core_animation.xml  core_foundation.xml  core_graphics.xml  foundation.xml  metal.xml  metal_kit.xml  model_io.xml  rust_metal.xml
hagane-core-foundation/: Cargo.toml
hagane-core-foundation/src/: lib.rs
hagane-objc/: Cargo.toml
hagane-objc/src/: lib.rs
src/: lib.rs  macros.rs
src/cocoa/: mod.rs
src/core_animation/: mod.rs
src/core_foundation/: mod.rs
src/core_graphics/: mod.rs
src/dds/: mod.rs
src/eve_rust/: mod.rs  wbg.rs
src/examples/: example-01.rs  example-02.metal  example-02.metallib  example-02.rs  example-03.metal  example-03.metallib  example-03.rs  example-04.metal  example-04.metallib  example-04.rs  example-05.metal  example-05.metallib  example-05.rs  wbg-to-obj.rs
src/foundation/: mod.rs
src/kit/: mod.rs
src/legacy_metal/: mod.rs
src/metal/: mod.rs
src/metal_kit/: mod.rs
src/model_io/: mod.rs
src/rust_metal/: initializer.rs  mod.rs
src/simd/: additions.rs  mod.rs
src/simd/types/: mod.rs  type_float1.rs  type_float2.rs  type_float2x2.rs  type_float2x3.rs  type_float2x4.rs  type_float3.rs  type_float3x2.rs  type_int1.rs  (+9 more)
