[package]
name = "metal"
version = "0.1.0"
authors = ["Aurora <aurora@aventine.se>"]

[lib]
name = "metal"
path = "src/lib.rs"

[[bin]]
name = "metal-info"
path = "src/bin/metal-info.rs"

[[bin]]
name = "example-01"
path = "src/examples/example-01.rs"

[[bin]]
name = "example-02"
path = "src/examples/example-02.rs"

[dependencies]
libc = "0.2.19"
objc = "0.2.2"
objc_id = "0.1.0"
objc-foundation = "0.1.1"
