[package]
name = "metal"
version = "0.1.0"
authors = ["Aurora <aurora@aventine.se>"]

[lib]
name = "metal"
path = "src/lib.rs"

[[bin]]
name = "metal-info"
path = "src/bin/metal-info.rs"

[[bin]]
name = "example-01"
path = "src/examples/example-01.rs"

[[bin]]
name = "example-02"
path = "src/examples/example-02.rs"

[[bin]]
name = "example-03"
path = "src/examples/example-03.rs"

[[bin]]
name = "example-04"
path = "src/examples/example-04.rs"

[[bin]]
name = "example-05"
path = "src/examples/example-05.rs"

[[bin]]
name = "wbg-to-obj"
path = "src/examples/wbg-to-obj.rs"

[dependencies]
bitflags = "0.7.0"
byteorder = "1.0.0"
nalgebra = "0.10.*"
objc = "0.2.2"
